[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aether-sdk"
version = "0.1.0"
description = "Python SDK for Aether decentralized RAG"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Aether Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]
langchain = ["langchain-core>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]

[tool.pytest.ini_options]
# Phase-9 dev pipeline runs `pytest` straight from `pip install ".[dev]"`;
# auto-mode means async tests work without an explicit asyncio_mode in
# every test file. See sdk/python/tests/test_async_client.py.
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/quintessence-group/aether-sdk-python"
Repository = "https://github.com/quintessence-group/aether-sdk-python"
Documentation = "https://github.com/quintessence-group/aether-sdk-python#readme"
"Bug Tracker" = "https://github.com/quintessence-group/aether-sdk-python/issues"

[project.scripts]
aether-py = "aether.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aether"]
